fixed z-index of coins navbar

--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ nav img {
     border-radius: 4px;
     padding: 10px;
     background-color: #f2f1ec;
+    z-index: -1;
 }
 
 /* Coins Buttons */
